--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "google-map-react": "^2.1.9",
     "json-loader": "^0.5.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^1.2.6",
     "react-google-map": "^3.1.1",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
